NetBSD Problem Report #41859

From www@NetBSD.org  Sun Aug  9 10:56:21 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 8E4D063C277
	for <gnats-bugs@gnats.netbsd.org>; Sun,  9 Aug 2009 10:56:21 +0000 (UTC)
Message-Id: <20090809105621.5EAEB63C270@www.NetBSD.org>
Date: Sun,  9 Aug 2009 10:56:21 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parenthesis  .
X-Send-Pr-Version: www-1.0

>Number:         41859
>Category:       kern
>Synopsis:       Missing parenthesis  .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 09 11:00:00 +0000 2009
>Closed-Date:    Sat Sep 12 18:56:02 +0000 2009
>Last-Modified:  Sat Sep 12 18:56:02 +0000 2009
>Originator:     Henning Petersen
>Release:        current-NetBSD
>Organization:
>Environment:
>Description:

>How-To-Repeat:

>Fix:
diff -u -r1.17 ppi.c
--- sys/dev/gpib/ppi.c	12 May 2009 14:21:58 -0000	1.17
+++ sys/dev/gpib/ppi.c	9 Aug 2009 07:25:08 -0000
@@ -181,7 +181,7 @@
 	if (sc == NULL)
 		return (ENXIO);

-	if (sc->sc_flags & PPIF_ALIVE) == 0)
+	if ((sc->sc_flags & PPIF_ALIVE) == 0)
 		return (ENXIO);

 	DPRINTF(PDB_FOLLOW, ("ppiopen(%x, %x): flags %x\n",

>Release-Note:

>Audit-Trail:
From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41859 CVS commit: src/sys/dev/gpib
Date: Sat, 12 Sep 2009 18:43:03 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Sep 12 18:43:03 UTC 2009

 Modified Files:
 	src/sys/dev/gpib: ppi.c

 Log Message:
 Add a missing parentheses. PR kern/41859


 To generate a diff of this commit:
 cvs rdiff -u -r1.17 -r1.18 src/sys/dev/gpib/ppi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 13 Sep 2009 03:56:02 +0900
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.