Add a missing parentheses. PR kern/41859